--- a/trunk/plugins/_core/styles/CMakeLists.txt
+++ b/trunk/plugins/_core/styles/CMakeLists.txt
@@ -20,3 +20,8 @@ FOREACH(FILE ${styles})
 ENDFOREACH(FILE)
 
 INSTALL(FILES ${styles} DESTINATION ${SIM_STYLES_DIR})
+
+FOREACH(file ${styles})
+  ADD_TO_DIST_TARGET("${file}")
+ENDFOREACH(file)
+ADD_TO_DIST_TARGET("${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt")
