--- a/trunk/plugins/_core/pict/CMakeLists.txt
+++ b/trunk/plugins/_core/pict/CMakeLists.txt
@@ -1,7 +1,9 @@
-# install only
-
 FILE(GLOB mng *.mng)
-FILE(GLOB png *.png)
 
 INSTALL(FILES ${mng} DESTINATION ${SIM_PICT_DIR})
-INSTALL(FILES ${png} DESTINATION ${SIM_PICT_DIR})
+
+FOREACH(file ${mng})
+  ADD_TO_DIST_TARGET("${file}")
+ENDFOREACH(file)
+
+ADD_TO_DIST_TARGET("${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt")
