make dist: now all plugins seems to be properly tarred...

--- a/trunk/plugins/_core/CMakeLists.txt
+++ b/trunk/plugins/_core/CMakeLists.txt
@@ -167,17 +167,10 @@ ELSE (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/jisp/icondef.xml)
     ADD_JISP_ARCHIVE(GPL-Icons  sim.jisp        _core_NON_SRC_TARGETS)
 ENDIF (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/jisp/icondef.xml)
 
-#ADD_JISP_ARCHIVE(smiles     smiles.jisp     _core_SRCS)
-#ADD_JISP_ARCHIVE(additional additional.jisp _core_SRCS)
-#ADD_JISP_ARCHIVE(icq5       icq5.jisp       _core_SRCS)
-#ADD_JISP_ARCHIVE(icq5.1     icq5.1.jisp     _core_SRCS)
-#ADD_JISP_ARCHIVE(icqlite    icqlite.jisp    _core_SRCS)
-#ADD_JISP_ARCHIVE(qip-icons  qip-icons.jisp  _core_SRCS)
-#ADD_JISP_ARCHIVE(lovenmoney lovenmoney.jisp _core_SRCS)
-#ADD_JISP_ARCHIVE(yahoo      yahoo.jisp      _core_SRCS)
-#ADD_JISP_ARCHIVE(msn	    msn.jisp        _core_SRCS)
-
 FILE(GLOB _prebuilt emoticons_prebuilt/*.jisp)
 INSTALL(FILES ${_prebuilt} DESTINATION ${SIM_ICONS_DIR})
+FOREACH(file ${_prebuilt})
+  ADD_TO_DIST_TARGET(${file})
+ENDFOREACH(file ${_prebuilt})
 
 SIM_ADD_PLUGIN(_core)
