--- a/trunk/plugins/styles/wood/CMakeLists.txt
+++ b/trunk/plugins/styles/wood/CMakeLists.txt
@@ -29,3 +29,10 @@ INSTALL(TARGETS wood LIBRARY DESTINATION ${SIM_PLUGIN_DIR}/styles RUNTIME  DESTI
 IF(WIN32)
     SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/plugins/styles)
 ENDIF(WIN32)
+
+FOREACH(_var wood_LIB_HDRS wood_LIB_SRCS)
+  FOREACH(file ${${_var}})
+    ADD_TO_DIST_TARGET("${CMAKE_CURRENT_SOURCE_DIR}/${file}")
+  ENDFOREACH(file)
+ENDFOREACH(_var)
+ADD_TO_DIST_TARGET("${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt")
