--- a/branches/branch-playground/plugins/_core/_core.vcproj
+++ b/branches/branch-playground/plugins/_core/_core.vcproj
@@ -4529,6 +4529,30 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\styles\SIM.5.2.5.xsl"
+				>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Copy $(InputPath)"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\styles\$(InputFileName)&quot;&#x0D;&#x0A;"
+						Outputs="$(OutDir)\styles\$(InputFileName)"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Copy $(InputPath)"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\styles\$(InputFileName)&quot;"
+						Outputs="$(OutDir)\styles\$(InputFileName)"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath="styles\SIM.5.2.xsl"
 				>
 				<FileConfiguration
