--- a/trunk/sim/CMakeLists.txt
+++ b/trunk/sim/CMakeLists.txt
@@ -4,6 +4,7 @@ ADD_SUBDIRECTORY(png)
 # target sim library #
 ######################
 ADD_TO_DIST_TARGET("${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt")
+ADD_TO_DIST_TARGET("${CMAKE_CURRENT_SOURCE_DIR}/sim.desktop")
 
 SET(sim_LIB_SRCS
         aboutdata.cpp
