Now SVN-revision number will be stored in a script-generated file while creating tarball, and tarballed development version will sitill know about it's revision.
Now cmake's make dist task is compleatly finished

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -178,20 +178,28 @@ IF(ENABLE_TARGET_UPDATE_MESSAGES)
 ENDIF(ENABLE_TARGET_UPDATE_MESSAGES)
 
 IF(DEV_BUILD)
-  # Get revision number from SVN
-  FIND_PACKAGE(Subversion)
-  IF(Subversion_FOUND)
-    MESSAGE("-- Found Subversion ${Subversion_VERSION_SVN}")
-    Subversion_WC_INFO(${PROJECT_SOURCE_DIR} Sim-IM)
-    IF(DEFINED Sim-IM_WC_REVISION)
-      SET(CMAKE_KVIRC_BUILD_REVISION ${Sim-IM_WC_REVISION})
-      MESSAGE("-- Current revision is ${Sim-IM_WC_REVISION}")
+  IF(EXISTS "${CMAKE_MODULE_PATH}/StaticRevDefinition.cmake")
+    # We have static information about revision number
+    # that were stored by tarball creating script (make dist)
+    INCLUDE(StaticRevDefinition)
+    MESSAGE(STATUS "This Sim-IM source package were created from SVN-repository revision ${Sim-IM_WC_REVISION}")
+  ELSE(EXISTS "${CMAKE_MODULE_PATH}/StaticRevDefinition.cmake")
+    # Get revision number from SVN
+    FIND_PACKAGE(Subversion)
+    IF(Subversion_FOUND)
+      MESSAGE("-- Found Subversion ${Subversion_VERSION_SVN}")
+      Subversion_WC_INFO(${PROJECT_SOURCE_DIR} Sim-IM)
+      IF(DEFINED Sim-IM_WC_REVISION)
+        SET(CMAKE_KVIRC_BUILD_REVISION ${Sim-IM_WC_REVISION})
+        MESSAGE("-- Current revision is ${Sim-IM_WC_REVISION}")
+      ELSE()
+        MESSAGE("-- No Subversion working copy found")
+      ENDIF()
     ELSE()
-      MESSAGE("-- No Subversion working copy found")
+      MESSAGE("Subversion not found. No revision number will be used")
     ENDIF()
-  ELSE()
-    MESSAGE("Subversion not found. No revision number will be used")
-  ENDIF()
+  ENDIF(EXISTS "${CMAKE_MODULE_PATH}/StaticRevDefinition.cmake")
+
 ENDIF()
 FIND_PROGRAM(BZIP2_EXECUTABLE bzip2)
 IF (BZIP2_EXECUTABLE)
